# starbian.wator

./: .gitignore  LICENSE  README.md  package.json
PubSubOnDHT/: install.bat  package.json
PubSubOnDHT/api/: broker.cluster.js  broker.js  broker.pubsub.js  pubsub.js
PubSubOnDHT/cli/: broker.bat  broker.js  client.bat  client.js
PubSubOnDHT/doc/: PubSubOnDHT.dot
PubSubOnDHT/src/: peer.crypto.js  peer.js  transferUDP.js
emqx.cluster/: docker-compose-emqx0.yml  docker-compose-emx0.yml  docker-compose-emx1.yml  docker-compose-emx2.yml  docker-compose-seed.yml
emqx.cluster/emqx2/: emqx.conf
hexpubsub/: App.Test.3.js  App.Test.js  App.js  Config.Test.3.js  Config.Test.js  Config.js  HexNode.js
ipfs-lambda/: admin.html  adminKey.html  adminKey.js  browseDevice.html  browseDevice.js  crypto.js  index.html  index.js  resourceUsage.html  resourceUsageGraph.html  signalGenerator.html  signalGenerator.js  vue-comp-chart-resource-usage.js  vue-comp-chart-signal-generator.js  vue-comp-chart.js  vue-comp-key.js  wator-lambda.html
mqtt-test/: cloudServer.json  package.json  pub.js  sub.js
npm/: .npmignore  LICENSE  README.md  index.js  package.json
npm/examples/: gofuro.js
npm/lib/: StarBian.js  StarBianBroadcast.js  StarBianPeer.js  StarBianRepeater.js  star_bian_crypto.js  (+2 more)
sample/: mqtt_connect.js
sample/door.camera/opencv/: CMakeLists.txt  Makefile  main.cpp
static/: docker-compose.yml
ws/: app.js  docker-compose.yml  install-docker-compose.yml  install.sh  install_update.sh  package.json  run.sh  starbianWSApp.js  vps-mini-docker-compose.yml
(+87 files in other folders)
